feat: current state before UI library migration

--- a/circada/src/index.css
+++ b/circada/src/index.css
@@ -89,7 +89,7 @@ code {
   --sidebar-ring: oklch(0.704 0.04 256.788);
 }
 
-.dark {
+html.dark, body.dark {
   --background: oklch(0.129 0.042 264.695);
   --foreground: oklch(0.984 0.003 247.858);
   --card: oklch(0.208 0.042 265.755);
@@ -121,6 +121,7 @@ code {
   --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.551 0.027 264.364);
+  background: #18181b !important;
 }
 
 @layer base {
